change "Australian Government Design System" to "GOLD Design System"

--- a/src/sass/customise.scss
+++ b/src/sass/customise.scss
@@ -3,7 +3,7 @@
 // Variable overides
 @import 'base/variables';
 
-// Australian Government Design System
+// GOLD Design System
 @import '../_auds/sass/auds';
 
 
